Fix design size and main icon image distortion.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -44,7 +44,7 @@ h1
 
 #header-content
 {
-	width: 1420px;
+	width: 1220px;
 	height: 69px;
 	margin: 0 auto;
 	text-align: left;
@@ -60,7 +60,7 @@ h1
 #page
 {
 	margin: 72px auto 0 auto;
-	width: 1440px;
+	width: 1240px;
 }
 
 #content
