--- a/static/css/runsafe_main.css
+++ b/static/css/runsafe_main.css
@@ -8,8 +8,6 @@
 #main-logos img
 {
 	margin: 0 5px;
-	width: 200px;
-	height: 200px;
 	cursor: pointer;
 }
 
